k8s/ingress/bom1-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bom1-ingress
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: 'true'
    konghq.com/plugins: bom1-rewrite-path
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /vmcbom/v1/SearchSupplier
        pathType: ImplementationSpecific
        backend:
          service:
            name: bom1
            port:
              number: 80
